アプリケーションの雛形を作成し、認証関係のエンドポイントを追加
